[tool.poetry]
name = "arg-services"
version = "1.6.0"
description = "gRPC definitions for microservice-based argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/arg-services-python"
include = ["src/**/*"]
packages = [
    { include = "arg_services", from = "src" },
    { include = "google/api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.53"
protobuf = "^4.22"
grpcio-reflection = "^1.53"
grpc-stubs = "^1.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
