[project]
name = "arg-services"
version = "1.7.10"
description = "gRPC definitions for microservice-based argumentation machines"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpc-stubs>=1,<2",
    "grpcio-reflection>=1,<2",
    "grpcio>=1,<2",
    "protobuf>=5,<6",
    "types-protobuf>=5,<6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
